Tidy up for final code review comments.